improve code style